# metasyn-privacy-template

./: README.md  cookiecutter.json
.github/workflows/: python-package.yml
{{ cookiecutter.__plugin_slug }}/: MANIFEST.in  pyproject.toml
{{ cookiecutter.__plugin_slug }}/.github/workflows/: python-package.yml
{{ cookiecutter.__plugin_slug }}/examples/: tutorial.ipynb
{{ cookiecutter.__plugin_slug }}/metasyncontrib/{{ cookiecutter.__package_name }}/: __init__.py  base.py  categorical.py  constant.py  continuous.py  datetime.py  discrete.py  privacy.py  provider.py  string.py
{{ cookiecutter.__plugin_slug }}/metasynthcontrib/{{ cookiecutter.__package_name }}/: continuous.py  discrete.py
{{ cookiecutter.__plugin_slug }}/tests/: test_provider.py
{{ cookiecutter.__plugin_slug}}/: README.md  pyproject.toml
{{ cookiecutter.__plugin_slug}}/metasynthcontrib/{{ cookiecutter.__package_name }}/: __init__.py  base.py  categorical.py  datetime.py  privacy.py  provider.py  string.py
