[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.__plugin_slug }}"
authors = [
    {name = "{{ cookiecutter.user_name }}", email = "{{ cookiecutter.email }}"},
]
description = "Plugin package for MetaSynth with {{ cookiecutter.plugin_name }}."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["metasynth", "{{ cookiecutter.plugin_name }}"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
	"metasynth",
	"polars",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["metasynthcontrib"]

[project.entry-points."metasynth.distribution_provider"]
{{cookiecutter.__package_name }} = "metasynthcontrib.{{ cookiecutter.__package_name }}.provider:{{ cookiecutter.__plugin_camel }}Provider"
